Implement JDBC persistence and secure API